--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
         <title>nexter &mdash; your home, your freedom</title>
     </head>
     <body class="container">
-        TEST TEXT
+        <div class="sidebar">
+            Sidebar
+        </div>
+        <div class="header">
+            Header
+        </div>
+        <div class="realtors">
+            Top 3 realtors
+        </div>
+        <div class="features">
+            Features
+        </div>
+        <div class="story__pictures">
+            Story pictures
+        </div>
+        <div class="Story__content">
+            Story content
+        </div>
+        <div class="homes">
+            Homes
+        </div>
+        <div class="gallery">
+            Gallery
+        </div>
+        <footer class="footer">
+            Footer
+        </footer>
     </body>
 </html>
