Building the features section part 1

--- a/index.html
+++ b/index.html
@@ -22,7 +22,60 @@
             Top 3 realtors
         </div>
         <div class="features">
-            Features
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-global"></use>
+                </svg>
+                <h4 class="heading-4">World's best luxury homes</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita dolor mollitia obcaecati ducimus laborum doloribus ab facilis eum incidunt!
+                </p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-trophy"></use>
+                </svg>
+                <h4 class="heading-4">Only the best properties</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam rerum voluptatem modi dolor ab aspernatur suscipit excepturi?
+                </p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <h4 class="heading-4">All homes in top locations</h4>
+                <p>
+                    Nam rerum voluptatem modi dolor ab aspernatur suscipit excepturi, minus ipsa iste fuga explicabo?
+                </p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-key"></use>
+                </svg>
+                <h4 class="heading-4">New home in one week</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet sit, autem, laboriosam error assumenda iusto impedit quis sequi cum optio sint. Iusto vitae sapiente neque?
+                </p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-presentation"></use>
+                </svg>
+                <h4 class="heading-4">Top 1% realtors</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi fuga iusto in rerum? Aperiam odit fugit sequi aspernatur laborum modi repellendus. 
+                </p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-lock"></use>
+                </svg>
+                <h4 class="heading-4">Secure payments on Nexter</h4>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea hic eos voluptates excepturi neque porro.                 
+                </p>
+            </div>
         </div>
         <div class="story__pictures">
             Story pictures
