--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-global"></use>
                 </svg>
-                <h4 class="heading-4">World's best luxury homes</h4>
+                <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita dolor mollitia obcaecati ducimus laborum doloribus ab facilis eum incidunt!
                 </p>
@@ -35,7 +35,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-trophy"></use>
                 </svg>
-                <h4 class="heading-4">Only the best properties</h4>
+                <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam rerum voluptatem modi dolor ab aspernatur suscipit excepturi?
                 </p>
@@ -44,7 +44,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-map-pin"></use>
                 </svg>
-                <h4 class="heading-4">All homes in top locations</h4>
+                <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
                 <p>
                     Nam rerum voluptatem modi dolor ab aspernatur suscipit excepturi, minus ipsa iste fuga explicabo?
                 </p>
@@ -53,7 +53,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-key"></use>
                 </svg>
-                <h4 class="heading-4">New home in one week</h4>
+                <h4 class="heading-4 heading-4--dark">New home in one week</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet sit, autem, laboriosam error assumenda iusto impedit quis sequi cum optio sint. Iusto vitae sapiente neque?
                 </p>
@@ -62,7 +62,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-presentation"></use>
                 </svg>
-                <h4 class="heading-4">Top 1% realtors</h4>
+                <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi fuga iusto in rerum? Aperiam odit fugit sequi aspernatur laborum modi repellendus. 
                 </p>
@@ -71,7 +71,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-lock"></use>
                 </svg>
-                <h4 class="heading-4">Secure payments on Nexter</h4>
+                <h4 class="heading-4 heading-4--dark">Secure payments on Nexter</h4>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea hic eos voluptates excepturi neque porro.                 
                 </p>
