--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
         <div class="story__pictures">
             Story pictures
         </div>
-        <div class="Story__content">
-            Story content
+        <div class="story__content">
+            <h3 class="heading-3 mb-sm">Happy Customers</h3>
+            <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
+            <p class="story__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet commodi provident ducimus repudiandae nihil, accusamus aut quae fugiat omnis repellat!</p>
+            <button class="btn">Find your own home</button>
         </div>
         <div class="homes">
             Homes
