--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                         <use xlink:href="img/sprite.svg#icon-key"></use>
                     </svg>
                     <p>$1,200,000</p>
-                    <button class="cta">Contact realtor</button>
                 </div>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
 
             <div class="home">
@@ -150,8 +150,8 @@
                         <use xlink:href="img/sprite.svg#icon-key"></use>
                     </svg>
                     <p>$2,750,000</p>
-                    <button class="cta">Contact realtor</button>
                 </div>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
             <div class="home">
                 <img src="img/house-3.jpeg" alt="House 3" class="home__img">
@@ -182,8 +182,8 @@
                         <use xlink:href="img/sprite.svg#icon-key"></use>
                     </svg>
                     <p>$850,000</p>
-                    <button class="cta">Contact realtor</button>
                 </div>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
             <div class="home">
                 <img src="img/house-4.jpeg" alt="House 4" class="home__img">
@@ -214,8 +214,8 @@
                         <use xlink:href="img/sprite.svg#icon-key"></use>
                     </svg>
                     <p>$1,950,000</p>
-                    <button class="cta">Contact realtor</button>
                 </div>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
             <div class="home">
                 <img src="img/house-5.jpeg" alt="House 5" class="home__img">
@@ -246,8 +246,8 @@
                         <use xlink:href="img/sprite.svg#icon-key"></use>
                     </svg>
                     <p>$9,500,000</p>
-                    <button class="cta">Contact realtor</button>
                 </div>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
             <div class="home">
                 <img src="img/house-6.jpeg" alt="House 6" class="home__img">
@@ -278,8 +278,8 @@
                         <use xlink:href="img/sprite.svg#icon-key"></use>
                     </svg>
                     <p>$600,000</p>
-                    <button class="cta">Contact realtor</button>
                 </div>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
            
         </div>
