Building the gallery part 1

--- a/index.html
+++ b/index.html
@@ -283,8 +283,10 @@
             </div>
            
         </div>
-        <div class="gallery">
-            Gallery
+        <f/figure class="gallery">
+            <figure class="gallery__item gallery__item-1">
+                <img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img">
+            </figure>
         </div>
         <footer class="footer">
             Footer
